--- a/tinh.html
+++ b/tinh.html
@@ -3,7 +3,7 @@
 		<title>hello Tinh</title>
 	</header>
 	<body>
-		<p>Hello Tình</p>
+		<p>Hello Tình iNamsoft</p>
 		<p>Liem edit</p>
 	</body>
 </html>
